# wrapper_emon

./: CMakeLists.txt  README.md  clean.bash
bug_code/: memo.txt  struct.py
py2_wrapper/: test.c  testwrap.c
pysrc/: mod_cffi_emon.py  test_example.py  test_ffi.py  test_wrapper.py
src_back_wrapper/: README.hd  test_ffi.py
test_energy/: CMakeCache.txt  CMakeLists.txt  Makefile  TODO.txt  cmake_install.cmake  em  em.c  simple_model.py
test_energy/src_back/: em.c
work_read_sharedlib/: em.c  em2.c  test.c  test2.c  test3.c  test4.c
workspace/: README
wrap_py3_testmodule/: setup.py  testpy3wrap.c
